--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -19,6 +19,14 @@
     },
     "rules": {
       "react/react-in-jsx-scope": 0,
-      "react/jsx-uses-react": 0
+      "react/jsx-uses-react": 0,
+      "react/prop-types": "off"
+    },
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "paths": ["src"]
+        }
+      }
     }
   }
