--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -20,7 +20,8 @@
     "rules": {
       "react/react-in-jsx-scope": 0,
       "react/jsx-uses-react": 0,
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "import/no-unresolved": "off"
     },
     "settings": {
       "import/resolver": {
