--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -1,12 +1,10 @@
 spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DB_PATH}
-    username: ${DB_USERNAME}
-    password: ${DB_PW}
-    hikari:
-      maximum-pool-size: 4
-
+    url: jdbc:h2:mem:test
   jpa:
     hibernate:
       ddl-auto: create
