--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,17 +1,18 @@
 spring:
-  h2:
-    console:
-      enabled: true
-      path: /h2
   datasource:
-    url: jdbc:h2:mem:test
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${DB_PATH}
+    username: ${DB_USERNAME}
+    password: ${DB_PW}
+    hikari:
+      maximum-pool-size: 4
   jpa:
-    hibernate:
-      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+  profiles:
+    include: etc
   security:
     oauth2:
       client:
@@ -36,8 +37,6 @@ springdoc:
   swagger-ui:
     url: /docs/open-api-3.0.1.json
     path: /docs/swagger
-
-
 
 jwt:
   key:
