--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -21,8 +21,7 @@
       "react/react-in-jsx-scope": 0,
       "react/jsx-uses-react": 0,
       "react/prop-types": "off",
-      "import/no-unresolved": "off",
-      "no-unused-vars": "off"
+      "import/no-unresolved": "off"
     },
     "settings": {
       "import/resolver": {
