--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,11 +1,17 @@
 spring:
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: ${DB_PATH}
+#    username: ${DB_USERNAME}
+#    password: ${DB_PW}
+#    hikari:
+#      maximum-pool-size: 4
+  h2:
+    console:
+      enabled: true
+      path: /h2
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DB_PATH}
-    username: ${DB_USERNAME}
-    password: ${DB_PW}
-    hikari:
-      maximum-pool-size: 4
+    url: jdbc:h2:mem:test
   jpa:
     show-sql: true
     properties:
