--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,17 +1,11 @@
 spring:
-#  datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: ${DB_PATH}
-#    username: ${DB_USERNAME}
-#    password: ${DB_PW}
-#    hikari:
-#      maximum-pool-size: 4
-  h2:
-    console:
-      enabled: true
-      path: /h2
   datasource:
-    url: jdbc:h2:mem:test
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${DB_PATH}
+    username: ${DB_USERNAME}
+    password: ${DB_PW}
+    hikari:
+      maximum-pool-size: 4
   jpa:
     show-sql: true
     properties:
